--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 <script type="text/javascript" src="bin/beauty/jsmin.js"></script>
 </head>
 <body>
+<div class="tag-layout" style="    transform: rotate(-46deg);
+    position: absolute;
+    width: 292px;
+    background: #e69734;
+    text-align: left;
+    left: -66px;
+    padding: 10px 0 10px 50px;
+    color: #FFF;
+    font-weight: bold;
+    border: 1px solid #ffc165;">
+	Binssoft Present
+</div>
 <header>
 	<h1>Beautifier - Minifier</h1>
 </header>
