--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="javascript formatter,formatter javascript, javascript obfuscator,online javascript formatter,javascript formatter online,javascript code formatter online,online script formatter,javascript minifier, minify javascript, javascript minified, de minify javascript, best javascript minifier, minified javascript, javascript reverse minify, un minify javascript, javascript de minify, php javascript minify, minifying javascript,online javascript beautifier, javascript beautifier online, online js beautifier, javascript online beautifier, js beautifier online, beautify js online, online code beautifier, beautify javascript online,js online beautifier, beautify code online, beautifier online, online jquery beautifier, jquery beautifier online    css formatter,formatter css, css obfuscator,online css formatter,css formatter online,css code formatter online,online script formatter,css minifier, minify css, css minified, de minify css, best css minifier, minified css, css reverse minify, un minify css, css de minify, php css minify, minifying css,online css beautifier, css beautifier online, online js beautifier, css online beautifier, js beautifier online, beautify js online, online code beautifier, beautify css online,js online beautifier, beautify code online, beautifier online, online css beautifier, css beautifier online css formatter,formatter html, html obfuscator,online html formatter,html formatter online,html code formatter online,online script formatter,html minifier, minify html, html minified, de minify html, best html minifier, minified html, html reverse minify, un minify html, html de minify, php html minify, minifying html,online html beautifier, html beautifier online, online js beautifier, html online beautifier, js beautifier online, beautify js online, online code beautifier, beautify html online,js online beautifier, beautify code online, beautifier online, online html beautifier, html beautifier online  formatter html, json obfuscator,online json formatter,json formatter online,json code formatter online,online script formatter,json minifier, minify json, json minified, de minify json, best json minifier, minified json, json reverse minify, un minify json, json de minify, php json minify, minifying json,online json beautifier, json beautifier online, online js beautifier, json online beautifier, js beautifier online, beautify js online, online code beautifier, beautify json online,js online beautifier, beautify code online, beautifier online, online json beautifier, json beautifier online"/>
 
 <link rel="shortcut icon" href="assets/favicon.ico">
-<title>Prettify - JSON / CSS / JS / HTML</title>
+<title>Beautifier - JSON / CSS / JS / HTML</title>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="assets/style.css"/>
 
@@ -31,7 +31,7 @@
     color: #FFF;
     font-weight: bold;
     border: 1px solid #ffc165;">
-	Binssoft Present
+	Binssoft Presents
 </div>
 <div class="err-panel"></div>
 <header>
@@ -48,6 +48,7 @@
 <br/>
 <div class="clearfix"></div>
 <div class="col-md-6 textmaincontainer">
+  <h4 style="color: #CCC">Want to Beautify?</h4>
 	<input type="file" name="minfiyfile" id="minfiyfile"  class="form-control upload-file-control" />
 	<br/>
 	<textarea class="form-cotrol minifierContainer jsonText"  ></textarea>
@@ -55,6 +56,7 @@
 	
 </div>
 <div class="col-md-6 textmaincontainer">
+  <h4 style="color: #CCC">Want to Minify?</h4>
 	<input type="file" name="beautyfile" id="beautyfile" class="form-control upload-file-control"  />
 	<br/>
 	<textarea class="form-cotrol  beautifierContainer jsonText"></textarea>
@@ -63,7 +65,7 @@
 </div>
 <div class="col-md-12 text-center">
 	<div class="col-md-5">
-		<input type="button" name="modifier" class="btn btn-danger btn-lg modifyBtn" data-type="beautify" value="Prettify">
+		<input type="button" name="modifier" class="btn btn-danger btn-lg modifyBtn" data-type="beautify" value="Beautify">
 	</div>
 	<div class="col-md-2">
 		<button class="btn btn-warning btn-lg downloadBtn">Download</button>
